Privacy =/= Contact changes
- minor privacy and contact changes

--- a/Privacy Policy.html
+++ b/Privacy Policy.html
@@ -60,8 +60,8 @@
                <div class="col">
                   <div class="txt text-center">
                      <div class="sec-header">
-                        <h2>CONTACT US<span>.</span></h2>
-                        <p><a href="index.html">HOME</a> <span>/</span> CONTACT US</p>
+                        <h2>Privacy policy <span>(and all that good stuff).</span></h2>
+                        <p><a href="index.html">HOME</a> <span>/</span>PRIVACY POLICY</p>
                      </div>
                   </div>
                </div>
@@ -74,66 +74,15 @@
 
 
 
-   <!-- ======================================== CONTACT SECTION ======================================== -->
-   <section id="contactSection">
-      <div class="container">
-         <div class="row">
-            <div class="col-lg-6 mb-5 mb-lg-0">
-               <div class="part1">
-                  <div class="sec-header">
-                     <h2>WE ARE ALWAYS HERE TO HELP YOU<span>.</span></h2>
-                     <p>Welcome to our support system! To ensure efficient assistance, kindly take note of the following guidelines:</p><br>
-                    <p> All user concerns will be addressed promptly; however will be <span style="text-decoration: underline;">immediately disregarded</span> unless accompanied by <span style="text-decoration: underline;">video proof</span>.</p>
-                    <p>The video should clearly depict the problem, include relevant user names, and indicate the rate per minute along
-                     with the allocated minutes.</p>
-                     <br>
-                     <p>
-                        This measure is in place to expedite the resolution process and provide you with the most effective support.
-                        Please follow these steps to help us understand and address your issue comprehensively.
-                     </p>
-                     <br> 
-                     <p>
-                        Thank you for your cooperation and understanding. Our support team is committed to assisting you to the best of
-                        their abilities.
-                     </p>
-                </div>
-             </div>
-            </div>
-            <div class="col-lg-6">
-               <form id="fs-frm" action="https://formspree.io/f/xgegealg" method="post" class="wow fadeInUpBig" data-wow-duration="1.5s">
-                  <fieldset id="fs-frm-inputs">
-                  <div class="form-row">
-                     <div class="form-group col-md-6">
-                        <input type="text" name="name" id="full-name" class="form-control" placeholder="Your Name">
-                     </div>
-                     <div class="form-group col-md-6">
-                        <input type="email" name="_replyto" id="email-address" class="form-control" placeholder="Email Address">
-                     </div>
-                     <div class="form-group col-md-6">
-                        <input type="number" name="telephone" id="telephone" class="form-control" placeholder="Phone Number">
-                     </div>
-                     <div class="form-group col-md-6">
-                        <input type="text" id="email-subject" name="_subject" class="form-control" placeholder="Subject">
-                     </div>
-                     <div class="form-group col-12">
-                        <textarea name="complaint" required="" class="form-control" id="complaint" rows="8" cols="80" placeholder="Write Message"></textarea>
-                     </div>
-                  </div>
-                  <button type="submit" class="btn layer-btn">SEND MESSAGE</button>
-               </fieldset>
-               </form>
-            </div>
-         </div>
-      </div>
-   </section>
+   <!-- ======================================== PRIVACY SECTION ======================================== -->
    <section class="py-5">
       <div class="container px-0 my-0">
           <div class="row gx-3 justify-content-left">
               <div class="col-auto col-auto">
                   <div class="text-left">
-                      <h2 class="fw-bolder" style ="color:#9489F5;">Privacy Policy</h2>
+                      <h2 class="fw-bolder" style ="color:#000000;">Privacy Policy<a style="color: #9489F5;">.</a></h2>
                       <ol style ="color:#9489F5;">
-                          <li><a href="#about">Who We Are</a></li>
+                          <li><!--<a href="#about">-->Who We Are</a></li>
                           <li>About this Policy</a></li>
                           <li>What is personal data?</a></li>
                           <li>Informing us of changes</a></li>
