--- a/contact.html
+++ b/contact.html
@@ -82,9 +82,9 @@
                   <div class="sec-header">
                      <h2>WE ARE ALWAYS HERE TO HELP YOU<span>.</span></h2>
                      <p>Welcome to our support system! To ensure efficient assistance, kindly take note of the following guidelines:</p><br>
-                    <li><p> All user concerns will be addressed promptly; however will be <span style="text-decoration: underline;">immediately disregarded</span> unless accompanied by <span style="text-decoration: underline;">video proof</span>.</p></li>
-                    <li><p>The video should clearly depict the problem, include relevant user names, and indicate the rate per minute along
-                     with the allocated minutes.</p></li>
+                    <p> All user concerns will be addressed promptly; however will be <span style="text-decoration: underline;">immediately disregarded</span> unless accompanied by <span style="text-decoration: underline;">video proof</span>.</p>
+                    <p>The video should clearly depict the problem, include relevant user names, and indicate the rate per minute along
+                     with the allocated minutes.</p>
 <br>
 <p>
    This measure is in place to expedite the resolution process and provide you with the most effective support.
