--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
                               <div class="col-md-6">
                                  <div class="description">
                                     <h4>SHADI</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, doloribus, voluptas. Facere, hic quae cupiditate velit a, autem sunt dolor.</p>
+                              
                                     <ul>
                                        <li><i class="fal fa-file-alt"></i> Current : <span>Engineering Level 1 @ McMaster University</span></li>
                                        <li><i class="fad fa-user-tie"></i> Title : <span>Founder & CTO</span></li>
-                                       <li class="mb-0"><i class="fal fa-external-link"></i> Portfolio : <a href="www.shadielfares.me" target="_blank">Check out my work!</a></li>
+                                       <li class="mb-0"><i class="fal fa-external-link"></i> Portfolio : <a href="https://shadielfares.me" target="_blank">Check out my work!</a></li>
                                     </ul>
                                  </div>
                               </div>
@@ -274,7 +274,7 @@
                               <div class="col-md-6">
                                  <div class="description">
                                     <h4>FURQAAN</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, doloribus, voluptas. Facere, hic quae cupiditate velit a, autem sunt dolor.</p>
+                                  
                                     <ul>
                                        <li><i class="fal fa-file-alt"></i> Current : <span>Engineering Level 1 @ McMaster University</span></li>
                                        <li><i class="fad fa-user-tie"></i> Title : <span>Co-Founder & CFO</span></li>
